--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,8 @@
     
             <div class="text-end">
               <button type="button" id="loginButton" class="btn btn-primary btn-outline-light me-2" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">Login</button>
-              <button type="button" class="btn btn-warning">Sign-up</button>
+              <button type="button" class="btn btn-primary btn-warning" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                Sign-up</button>
             </div>
           </div>
         </div>
@@ -447,6 +448,63 @@
           </div>
         </div>
       </div>
+
+ <!-- sign-up modal -->
+      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="staticBackdropLabel">Sign up</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+             
+              <form>
+                <div class="mb-3">
+                    <label for="exampleInputUsername" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="exampleInputUsername"  required>
+                  </div>
+    
+    
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required >
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword3" class="form-label">Set password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword3">
+                  <div id="passwordHelpBlock" class="form-text">
+                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                  </div>
+                </div>
+    
+                <div class="mb-3">
+                    <label for="exampleInputPassword4" class="form-label"> Confirm password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword4">
+                  </div>
+    
+                <div class="mb-3 form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                      Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                      You must agree before submitting.
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit form</button>
+              </form>
+            </div>
+            <div class="modal-footer">
+                
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    
       
 
 
