--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -145,6 +145,11 @@
                     <li><a class="dropdown-item" href="#">Most backed</a></li>
                 </ul>
             </div>
+            {% if paginate.total == 0 %}
+            <h4 class="text-center mt-4" role="alert">
+                No discussions found.
+            </h4>
+            {% else %}
             <ul class="discussion-list list-unstyled">
 
                 {% for post in paginate.items %}
@@ -175,7 +180,7 @@
                         <div class="col-md-2 column">
                             <div class="row clearfix">
                                 <div class="col-md-6 column">
-                                    <span class="badge bg-info">{{ post.posttags }}</span>
+                                    <span class="badge bg-info">{{ post.tag }}</span>
                                 </div>
                                 <div class="col-md-6 column text-secondary">
                                     <p>
@@ -183,7 +188,7 @@
                                             fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16">
                                             <path
                                                 d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
-                                        </svg> {{ post.commentcount }}
+                                        </svg> {{ post.comment_count }}
                                     </p>
                                 </div>
                             </div>
@@ -199,6 +204,7 @@
                 {% endfor %}
                 <li {% if not paginate.has_next %}class="page-item disabled"{% else %}class="page-item"{% endif %}><a class="page-link" href="{{ url_for('index') }}?page={{ paginate.next_num }}" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
               </ul>
+            {% endif %}
         </div>
     </div>
 </div>
