feat: Add new-discussion page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
                     <img alt="logo" src="https://placehold.co/133x40" class="rounded" />
                 </a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 text-white">Home</a></li>
+                    <li><a href="/" class="nav-link px-2 text-white">Home</a></li>
                     <li><a href="#" class="nav-link px-2 text-white">Rankings</a></li>
                 </ul>
 
@@ -33,9 +33,9 @@
                     </div>
                 </form>
                 <div class="text-end">
-                    <button type="button" id="loginButton" class="btn btn-primary btn-outline-light me-2"
+                    <button type="button" id="loginButton" class="btn btn-outline-light me-2"
                         data-bs-toggle="modal" data-bs-target="#exampleModalToggle">Login</button>
-                    <button type="button" class="btn btn-primary btn-warning" data-bs-toggle="modal"
+                    <button type="button" class="btn btn-warning" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop">
                         Sign-up</button>
                 </div>
