feature: add the content of ranking list

--- a/app/templates/ranking-page.html
+++ b/app/templates/ranking-page.html
@@ -169,6 +169,31 @@
             </ul>
         </div>
 
-        
+        <!-- ranking-list -->
+        <div class="col-md-9 column">
+            <div class="row clearfix">
+                <div class="col-md-10 column row">
+                    <!-- beginning -->
+                    <div class="col-md-11 column row clearfix list-margin border-0 border-bottom">
+                        <span class="text-secondary">No.1</span>
+                        <div class="col-md-1 column">
+                            <!-- Image link points to the personal profile page -->
+                            <a href="personal-profile.html">
+                                <img alt="Profile Picture" src="https://placehold.co/50" class="rounded-circle" />
+                            </a>
+                        </div>
+                        <div class="col-md-11">
+                            <ul class="list-inline">
+                                <li class="h6 list-inline-item">Joel</li>
+                                <li class="text-secondary list-inline-item">3456 credits</li>
+                                <li class="text-secondary list-inline-item">21 likes</li>
+                                <li class="text-secondary list-inline-item">21 collections</li>
+                            </ul>
+                        </div>
+                    </div>
+                    
+                    <!-- ending -->
+
+
     {% endblock %}
         
