--- a/app/templates/personal-profile.html
+++ b/app/templates/personal-profile.html
@@ -170,197 +170,86 @@ Type: Integer
         <div class="col-md-9 column">
             <div class="row clearfix">
                 <div class="col-md-10 column row">
-                    <!-- beginning -->
+                    <!-- Loop through each post in the list of posts -->
+                    {% for post in posts %}
                     <div class="col-md-11 column row clearfix list-margin border-0 border-bottom">
-                        <p class=" text-secondary">title of the post</p>
-                        <div class="col-md-1 column ">
-                            <img alt="50x50" src="https://placehold.co/50" class="rounded-circle" />
+                        <p class="text-secondary">{{ post.title }}</p>
+                        <div class="col-md-1 column">
+                            <img alt="Profile Picture" src="{{ post.user.profile_picture_url }}" class="rounded-circle" />
                         </div>
                         <div class="col-md-11">
                             <ul class="list-inline list-style-none">
-                                <li class="h6 list-inline-item list-style-none">Joel</li>
-                                <li class="text-secondary list-inline-item">an hour ago</li>
-                                <li class="text-secondary list-inline-item">Edited</li>
+                                <li class="h6 list-inline-item list-style-none">{{ post.user.name }}</li>
+                                <li class="text-secondary list-inline-item">{{ post.time_since_posted }}</li>
+                                <li class="text-secondary list-inline-item">{{ 'Edited' if post.edited else '' }}</li>
                             </ul>
-
                             <h5>
-                                Title-title-title-title
+                                {{ post.subtitle }}
                             </h5>
-
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at ligula nec metus
-                                dictum blandit ac id tellus. Fusce sed magna vitae turpis ultrices malesuada. In hac
-                                habitasse platea dictumst...
+                                {{ post.content }}
                             </p>
                             <div class="list-reply-margin">
                                 <p>
+                                    <!-- Example of interaction -->
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
                                         fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd"
                                             d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> Jessie replied to this.
+                                    </svg> {{ post.last_reply.user.name }} replied to this.
                                 </p>
-                                <!-- 引用的icon具体再查 -->
                                 <p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
                                         fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd"
                                             d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> May likes this.
+                                    </svg> {{ post.likes }} people like this.
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <!-- ending -->
-
-
-                    <div class="col-md-11 column row clearfix list-margin border-0 border-bottom">
-                        <p class=" text-secondary">title of the post</p>
-                        <div class="col-md-1 column ">
-                            <img alt="50x50" src="https://placehold.co/50" class="rounded-circle" />
-                        </div>
-                        <div class="col-md-11">
-                            <ul class="list-inline list-style-none">
-                                <li class="h6 list-inline-item list-style-none">Joel</li>
-                                <li class="text-secondary list-inline-item">an hour ago</li>
-                                <li class="text-secondary list-inline-item">Edited</li>
-                            </ul>
-
-                            <h5>
-                                Title-title-title-title
-                            </h5>
-
-                            <p>
-                                <button class="rounded border-0">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg>
-                                    reply to David</button>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at ligula nec metus
-                                dictum blandit ac id tellus. Fusce sed magna vitae turpis ultrices malesuada. In hac
-                                habitasse platea dictumst...
-                            </p>
-                            <div class="list-reply-margin">
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> Jessie replied to this.
-                                </p>
-                                <!-- 引用的icon具体再查 -->
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> May likes this.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-11 column row clearfix list-margin border-0 border-bottom">
-                        <p class=" text-secondary">title of the post</p>
-                        <div class="col-md-1 column ">
-                            <img alt="50x50" src="https://placehold.co/50" class="rounded-circle" />
-                        </div>
-                        <div class="col-md-11">
-                            <ul class="list-inline list-style-none">
-                                <li class="h6 list-inline-item list-style-none">Joel</li>
-                                <li class="text-secondary list-inline-item">an hour ago</li>
-                                <li class="text-secondary list-inline-item">Edited</li>
-                            </ul>
-
-                            <h5>
-                                Title-title-title-title
-                            </h5>
-
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at ligula nec metus
-                                dictum blandit ac id tellus. Fusce sed magna vitae turpis ultrices malesuada. In hac
-                                habitasse platea dictumst...
-                            </p>
-                            <div class="list-reply-margin">
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> Jessie replied to this.
-                                </p>
-                                <!-- 引用的icon具体再查 -->
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> May likes this.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- ending -->
-
-
-                    <div class="col-md-11 column row clearfix list-margin border-0 border-bottom">
-                        <p class=" text-secondary">title of the post</p>
-                        <div class="col-md-1 column ">
-                            <img alt="50x50" src="https://placehold.co/50" class="rounded-circle" />
-                        </div>
-                        <div class="col-md-11">
-                            <ul class="list-inline list-style-none">
-                                <li class="h6 list-inline-item list-style-none">Joel</li>
-                                <li class="text-secondary list-inline-item">an hour ago</li>
-                                <li class="text-secondary list-inline-item">Edited</li>
-                            </ul>
-
-                            <h5>
-                                Title-title-title-title
-                            </h5>
-
-                            <p>
-                                <button class="rounded border-0">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg>
-                                    reply to David</button>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at ligula nec metus
-                                dictum blandit ac id tellus. Fusce sed magna vitae turpis ultrices malesuada. In hac
-                                habitasse platea dictumst...
-                            </p>
-                            <div class="list-reply-margin">
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> Jessie replied to this.
-                                </p>
-                                <!-- 引用的icon具体再查 -->
-                                <p>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
-                                        fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> May likes this.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2 column">
-                    </div>
+                    {% endfor %}
                 </div>
-
-
             </div>
         </div>
-    </div>
-</div>
+        
+     <!-- ending -->
+ <!-- post list explanation
+List of Variables and Their Descriptions
+#posts:
+Type: List of dictionaries or objects
+Description: This should be a list where each element represents a post. Each post contains details such as the title, user information, content, and interactions like replies and likes.
+Each post dictionary/object in the posts list should include the following keys/attributes:
+
+1.title:
+Type: String
+Description: The title of the post.
+2.user:
+Type: Dictionary/Object
+Description: Contains user-specific information. This dictionary/object should include:
+2.1 name: The name of the user who posted.
+2.2 profile_picture_url: URL to the user's profile picture.
+3.time_since_posted:
+Type: String
+Description: Describes how long ago the post was made (e.g., "an hour ago").
+4.edited:
+Type: Boolean
+Description: Indicates whether the post has been edited.
+5.subtitle:
+Type: String
+Description: A subtitle or secondary title for the post.
+6.content:
+Type: String
+Description: The main content of the post.
+7.last_reply:
+Type: Dictionary/Object
+Description: Contains information about the last reply to the post. It should include:
+7.1 user: Dictionary/Object with details of the user who made the last reply.
+7.2 name: Name of the user who replied.
+8.likes:
+Type: Integer
+Description: The number of likes the post has received.-->
+
 
 {% endblock %}
 
