add: post new question function

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-{% if title %}
-<title>QuorAI - Home</title>
-{% else %}
-<title>Welcome to Blog!</title>
-{% endif %}
+<title>QuorAI - Answers with AI</title>
 {% endblock %}
 
 
@@ -56,17 +52,17 @@
                     <div class="row clearfix">
                         <div class="col-md-10 column row clearfix">
                             <div class="col-md-1 column">
-                                <img alt="50x50" src='{{ post.author.avatar }}' class="rounded-circle" style="width: 50px; height: 50px;" />
+                                <img alt="50x50" src='https://placehold.co/50x50' class="rounded-circle" style="width: 50px; height: 50px;" />
                             </div>
 
                             <div class="col-md-11">
                                 <h5>
-                                    {{ post.posttitle }}
+                                    {{ post.title }}
                                 </h5>
                                 <p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> {{ post.author.username }} replied 4 hours ago
+                                    </svg> {{ post.author }} replied 4 hours ago
                                 </p>
                                 <p>
                                     {{ post.body }}
