--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,8 +14,7 @@
 <div class="container">
     <div class="row clearfix">
         <div class="homepage-nav col-md-3 column">
-            <button type="button" class="btn btn-warning bg-gradient text-white px-3 mx-5" id="newpostpageBtn">Start a
-                Discussion</button>
+            <a class="btn btn-warning bg-gradient text-white px-3 mx-5" href="{{ url_for('newDiscussion') }}">Start a Question</a>
             <ul class="nav flex-column mt-4 mx-5">
                 {% for category in categories %}
                 <li class="nav-item mb-1">
@@ -62,7 +61,7 @@
                                 <p>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z" />
-                                    </svg> {{ post.author }} replied 4 hours ago
+                                    </svg> Publish Date: <span id="humanTimestamp_{{ post.id }}"></span>
                                 </p>
                                 <p>
                                     {{ post.body }}
@@ -103,5 +102,23 @@
 
 
 {% block script %}
-<script src="{{ url_for('static', filename='js/index.js') }}"></script>
+<!-- <script src="{{ url_for('static', filename='js/index.js') }}"></script> -->
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        {% for post in paginate.items %}
+            var timestamp_{{ post.id }} = '{{ post.timestamp }}';
+            var momentTimestamp_{{ post.id }} = moment(timestamp_{{ post.id }});
+            var now = moment();
+            var diffInHours_{{ post.id }} = now.diff(momentTimestamp_{{ post.id }}, 'hours');
+            var element_{{ post.id }} = document.getElementById('humanTimestamp_{{ post.id }}');
+
+            if (diffInHours_{{ post.id }} < 24) {
+                element_{{ post.id }}.textContent = momentTimestamp_{{ post.id }}.fromNow();
+            } else {
+                element_{{ post.id }}.textContent = momentTimestamp_{{ post.id }}.format('YYYY-MM-DD HH:mm:ss');
+            }
+        {% endfor %}
+    });
+</script>
+
 {% endblock %}
